Detect NI-avi at playtime like mplayer. Fixes Ticket333

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>